--- a/hydration_test/index.html
+++ b/hydration_test/index.html
@@ -10,7 +10,9 @@
       <input value="0" r:0 />
       <button r:1>
         count:
-        <!-- r:2 -->0<!-- r:2 -->
+        <script r:2></script>
+        0
+        <script r:2></script>
       </button>
     </section>
     <script type="module" src="./index.js"></script>
