--- a/hydration_test/index.html
+++ b/hydration_test/index.html
@@ -10,13 +10,25 @@
     <title>HYDRATION</title>
   </head>
   <body>
+    <!-- Counter.tsx (1) -->
     <section>
       <input value="0" r:0 />
       <button r:1>
         count:
         <script r:2></script>
-        0
+        5
         <script r:2></script>
+      </button>
+    </section>
+
+    <!-- Counter.tsx (2) -->
+    <section>
+      <input value="0" r:3 />
+      <button r:4>
+        count:
+        <script r:5></script>
+        23
+        <script r:5></script>
       </button>
     </section>
     <script type="module" src="./index.js"></script>
